# CometCLI

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
cli_comet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
comet/: RELEASE.md  cli.py  render.py  system.md
comet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cometcli.egg-info/: PKG-INFO  SOURCES.txt
