[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-comet"
version = "1.2.7"
description = "A terminal UI that automatically generates git commit messages using local language models via Ollama."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "razoring" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "ollama",
    "textual",
    "colorama",
    "openai"
]

[project.scripts]
comet = "comet.cli:main"
git-comet = "comet.cli:main_git_comet"

[tool.setuptools]
packages = ["comet"]

[tool.setuptools.package-data]
comet = ["system.md"]