[metadata]
name = cli-comet
version = 1.1.0
description = A terminal UI that automatically generates git commit messages using local language models via Ollama.
long_description = file: README.md
long_description_content_type = text/markdown
author = razoring
license = GPL-3.0 license
url = https://github.com/razoring/CometCLI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console

[options]
packages = find:
python_requires = >=3.10
install_requires =
    ollama
    textual
    colorama
    openai
include_package_data = True

[options.entry_points]
console_scripts =
    comet = comet.cli:main
